kubernetes/apps/home-automation/zigbee2mqtt/resources.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-automation
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zigbee2mqtt
        app.kubernetes.io/instance: zigbee2mqtt
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: zigbee2mqtt
          # renovate: datasource=docker depName=docker.io/koenkk/zigbee2mqtt
          image: docker.io/koenkk/zigbee2mqtt:2.14.2
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: config
          configMap:
            name: zigbee2mqtt-config
        - name: data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-automation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zigbee2mqtt
  ports:
    - name: http
      port: 8080
      targetPort: 8080
